[project]
name = "funky-coder"
version = "0.1.0"
description = "A Python-based AI assistant that generates Python functions with a So-Cal vibe."
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.7"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
